Arreglado 2d y MAP hechos

--- a/11762_Image_Description.ipynb
+++ b/11762_Image_Description.ipynb
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 10,
       "id": "78e56a13-5411-4d5e-acef-b6e1130863ab",
       "metadata": {
         "editable": true,
@@ -328,14 +328,10 @@
       },
       "outputs": [
         {
-          "ename": "NotImplementedError",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[5], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m mAP_hist_1d \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# -----\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMean Average Precision (mAP): \u001b[39m\u001b[38;5;132;01m%.5f\u001b[39;00m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m mAP_hist_1d)\n",
-            "\u001b[1;31mNotImplementedError\u001b[0m: "
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mean Average Precision (mAP): 0.70903\n"
           ]
         }
       ],
@@ -343,9 +339,11 @@
         "# Fill this variable with the resulting mAP\n",
         "mAP_hist_1d = 0.0\n",
         "\n",
-        "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
-        "# -----\n",
+        "\n",
+        "cbir = a1.CBIR(a1.compute_1d_color_hist,bins_per_hist=8)\n",
+        "cbir.build_image_db(dataset.load_database_images())\n",
+        "mAP_hist_1d = cbir.compute_mAP(dataset)\n",
+        "\n",
         "\n",
         "print('Mean Average Precision (mAP): %.5f' % mAP_hist_1d)"
       ]
@@ -386,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "d8ef2b9c-92a8-44ce-9db9-a167d2f478c1",
       "metadata": {
         "editable": true,
@@ -395,13 +393,23 @@
         },
         "tags": []
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mean Average Precision (mAP): 0.80455\n"
+          ]
+        }
+      ],
       "source": [
         "# Fill this variable with the resulting mAP\n",
         "mAP_hist_2d = 0.0\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
+        "cbir = a1.CBIR(a1.compute_2d_color_hist, bins_per_hist=8)\n",
+        "cbir.build_image_db(dataset.load_database_images())\n",
+        "mAP_hist_2d = cbir.compute_mAP(dataset)\n",
         "# -----\n",
         "\n",
         "print('Mean Average Precision (mAP): %.5f' % mAP_hist_2d)"
@@ -459,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "592d606f-64fe-42fa-887e-2e7426a24e61",
       "metadata": {
         "editable": true,
@@ -492,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "bdad292d-96ea-4281-9443-4cb87d320c54",
       "metadata": {
         "editable": true,
@@ -501,14 +509,22 @@
         },
         "tags": []
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mean Average Precision (mAP): 0.71320\n"
+          ]
+        }
+      ],
       "source": [
         "# Fill this variable with the resulting mAP\n",
         "mAP_lbp = 0.0\n",
         "\n",
-        "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
-        "# -----\n",
+        "cbir = a1.CBIR(a1.compute_lbp_descriptor, p=8, r=1)\n",
+        "cbir.build_image_db(dataset.load_database_images())\n",
+        "mAP_lbp = cbir.compute_mAP(dataset)\n",
         "\n",
         "print('Mean Average Precision (mAP): %.5f' % mAP_lbp)"
       ]
@@ -657,7 +673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "78317f1f-19f8-4a69-9197-0d6e628cbdf5",
       "metadata": {},
       "outputs": [
