Updated changes (cleaned up)

--- a/11762_Image_Description.ipynb
+++ b/11762_Image_Description.ipynb
@@ -2715,7 +2715,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ID = '49867504P' # Your DNI or NIE\n",
+    "ID = '' # Your DNI or NIE\n",
     "\n",
     "zip_filename = ID + '_A1.zip'\n",
     "zf = zipfile.ZipFile(zip_filename, mode = 'w')\n",
